# bezier-interpolation

./: Cargo.toml  README.md
src/: bezier_interpolation.rs  lib.rs  ncr.rs
